--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: 600;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -11,6 +19,55 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+
+
+.cvh1{
+  border: solid 1px #fff;
+}
+
+.logoimg{
+  height: 50px ;
+  width: 100px;
+}
+
+.trackbuttons{
+  border: none;
+  padding: 3px 10px;
+  margin: 2px 3px;
+  border: solid 1px #fff ;
+  
+
+}
+
+.prevnxt{
+  background-color: rgb(79, 57, 129);
+  color: rgb(255, 255, 255);
+  border: none;
+  margin: 3px;
+  padding: 3px 5px;
+  border-color: rgb(0, 0, 0);
+  border:solid 1px #000 ;
+}
+
+.prevnxt:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(79, 57, 129);
+  border: none;
+  margin: 3px;
+  padding: 3px 5px;
+  transition: 1s;
+  border:solid 1px #000 ;
+}
+
+h3{
+color: #7A52C1;
+text-align: center;
+padding-top:30px ;
+padding-bottom: 30px;
+text-transform: uppercase;
+border: solid 2px #cacfcc;
 }
 
 .App-header {
