--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
+
+
 .App {
   text-align: center;
 }
@@ -6,7 +10,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif !important;
+  font-family: 'Rubik', sans-serif !important;
   font-weight: 600;
 }
 
@@ -41,25 +45,7 @@
 
 }
 
-.prevnxt{
-  background-color: rgb(79, 57, 129);
-  color: rgb(255, 255, 255);
-  border: none;
-  margin: 3px;
-  padding: 3px 5px;
-  border-color: rgb(0, 0, 0);
-  border:solid 1px #000 ;
-}
 
-.prevnxt:hover{
-  background-color: rgb(255, 255, 255);
-  color: rgb(79, 57, 129);
-  border: none;
-  margin: 3px;
-  padding: 3px 5px;
-  transition: 1s;
-  border:solid 1px #000 ;
-}
 
 h3{
 color: #7A52C1;
@@ -67,7 +53,7 @@ text-align: center;
 padding-top:30px ;
 padding-bottom: 30px;
 text-transform: uppercase;
-border: solid 2px #cacfcc;
+
 }
 
 .App-header {
@@ -94,3 +80,160 @@ border: solid 2px #cacfcc;
     transform: rotate(360deg);
   }
 }
+
+
+/* Variable CSS */
+
+:root {
+  --first-color: hsl(353, 100%, 65%);
+  --text-color: hsl(312, 87%, 28%);
+  --body-color: hsl(258, 60%, 98%);
+  --container-color: #fff;
+  
+  
+  --body-font: 'Rubik', sans-serif;
+  --normal-font-size: 1.2rem;
+  --small-font-size: 0.875rem;
+  --smaller-font-size:0.813;
+  
+  
+  --font-medium: 500;
+  --font-semibold: 600;
+  --font-bold:700;
+  
+  
+  --shadow: 0px 5px 20px 0px rgb(69 67 96 / 10%);
+  
+  --border-radius: 20px;
+  
+  }
+  
+  
+  /* Responsive typography */
+
+  :root{
+  --h1-font-size: 300px;
+  --h2-font-size: 30px;
+  --h3-font-size: 1.5rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
+  }
+  
+  
+  
+  /* Responsive typography END */
+  
+  
+  
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+  }
+  
+  html{
+    scroll-behavior: smooth;
+  }
+  
+  body,
+  button,
+  input,
+  textarea {
+   font-family: var(--body-font);
+   font-size: var(--normal-font-size);
+  }
+  
+  body{
+    background-color: var(--body-color);
+    line-height: 1.7;
+    
+  }
+  
+  h1, h2, h3{ 
+  color: var(--title-color);
+  font-weight: var(--font-semibold);
+  font-weight: 1.7;
+  }
+  
+  ul{
+    list-style: none;
+  }
+  
+  a{
+    text-decoration: none;
+  }
+  
+  button{
+    cursor: pointer;
+    border: none;
+    outline: none;
+  }
+  
+  img{
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+    height: 90px;
+    width: 90px;
+  }
+  
+  /* Variable CSS END */
+  
+  
+  /* CSS CLASSES */
+  
+  .container{
+    max-width: 1080px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+  }
+  
+  .grid{
+    display: grid;
+  }
+  
+  .section{
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+    margin-bottom: 100px;
+  }
+  
+  .section__title{
+    text-align: center;
+    color: #7A52C1;
+    font-size:var(--h2-font-size);
+    margin-left: 0.875rem;
+    margin-bottom: 7rem ;
+    font-weight: var(--font-bold);
+    position: relative ;
+  }
+  
+  
+  .btn{
+    padding: 0.75rem 2rem;
+    line-height: 1;
+    border-radius: 1.875rem;
+    box-shadow: 0 1px rgb(☺ ☺ ☺ / 0%);
+    border: 1px solid transparent;
+    color: #fff;
+    display: inline-block;
+    background-color: var(--first-color);
+    font-weight: var(--font-bold);
+  }
+  
+  @keyframes button-push {
+  
+  50%{
+    transform: scale(0.8);
+  }
+  100%{
+    transform: scale(1);
+  }
+  
+  }
+  
+  .btn:hover{
+    animation: button-push 0.3s linear 1;
+  }
